[gd_scene load_steps=12 format=3 uid="uid://cvfqghqp568k2"]

[ext_resource type="Script" path="res://script/enviroment/interactive_objects/Tree.gd" id="1_qjgeg"]
[ext_resource type="Texture2D" uid="uid://djh3b1ipdn3ni" path="res://art/interactive_objects/Tree.png" id="2_twtwt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_knyk0"]
atlas = ExtResource("2_twtwt")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_gn4nt"]
atlas = ExtResource("2_twtwt")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_kt530"]
atlas = ExtResource("2_twtwt")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0rx3"]
atlas = ExtResource("2_twtwt")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fec8v"]
atlas = ExtResource("2_twtwt")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjjvt"]
atlas = ExtResource("2_twtwt")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ul8q6"]
atlas = ExtResource("2_twtwt")
region = Rect2(576, 0, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_2gp5d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_knyk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gn4nt")
}],
"loop": false,
"name": &"cutting_tree",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kt530")
}],
"loop": false,
"name": &"no_tree",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0rx3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fec8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjjvt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ul8q6")
}],
"loop": true,
"name": &"tree",
"speed": 4.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nf0xp"]
size = Vector2(167, 242)

[node name="Tree" type="Node2D"]
script = ExtResource("1_qjgeg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2gp5d")
animation = &"cutting_tree"
frame = 1
frame_progress = 1.0

[node name="pickable_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pickable_area"]
position = Vector2(2.08165e-12, 2.08165e-12)
shape = SubResource("RectangleShape2D_nf0xp")

[node name="growth_timer" type="Timer" parent="."]
wait_time = 5.0

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-1, 113)

[connection signal="body_entered" from="pickable_area" to="." method="_on_pickable_area_body_entered"]
[connection signal="body_exited" from="pickable_area" to="." method="_on_pickable_area_body_exited"]
[connection signal="timeout" from="growth_timer" to="." method="_on_growth_timer_timeout"]
